Initial project upload

--- a/LibraryManagement/Views/Admin/ManageUsers.cshtml
+++ b/LibraryManagement/Views/Admin/ManageUsers.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<LibraryManagement.Models.UserModel>
+﻿@using LibraryManagement.Models.Entities
+@model List<UserModel>
 @{
     ViewData["Title"] = "Manage Users";
 }
