--- a/LibraryManagement/Views/Book/Index.cshtml
+++ b/LibraryManagement/Views/Book/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<LibraryManagement.Models.BookModel>
+﻿@using LibraryManagement.Models.Entities
+@model List<BookModel>
 @{
 	ViewBag.Title = "Manage Books";
 }
