--- a/LibraryManagement/Views/Borrowing/Edit.cshtml
+++ b/LibraryManagement/Views/Borrowing/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model LibraryManagement.Models.BorrowingModel
+﻿@using LibraryManagement.Models.Entities
+@model BorrowingModel
 @{
     ViewData["Title"] = "Edit Borrowing";
 }
