--- a/LibraryManagement/Views/Book/Edit.cshtml
+++ b/LibraryManagement/Views/Book/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model LibraryManagement.Models.BookModel
+﻿@using LibraryManagement.Models.Entities
+@model BookModel
 @{
     ViewData["Title"] = "Edit Book";
 }
