--- a/LibraryManagement/Views/StudentDashboard/Profile.cshtml
+++ b/LibraryManagement/Views/StudentDashboard/Profile.cshtml
@@ -1,4 +1,5 @@
-﻿@model LibraryManagement.Models.UserModel
+﻿@using LibraryManagement.Models.Entities
+@model UserModel
 @{
     ViewData["Title"] = "My Profile";
 }
