--- a/LibraryManagement/Views/StudentDashboard/SearchBooks.cshtml
+++ b/LibraryManagement/Views/StudentDashboard/SearchBooks.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<LibraryManagement.Models.BookModel>
+﻿@using LibraryManagement.Models.Entities
+@model List<BookModel>
 @{
     ViewData["Title"] = "Search Books";
 }
