--- a/LibraryManagement/Views/AdminDashboard/PendingApprovals.cshtml
+++ b/LibraryManagement/Views/AdminDashboard/PendingApprovals.cshtml
@@ -1,5 +1,5 @@
-﻿@using LibraryManagement.Models.Entities
-@model List<UserModel>
+﻿@using LibraryManagement.Models;
+@model List<User>
 @{
     ViewData["Title"] = "Pending Approvals";
 }
