--- a/LibraryManagement/Views/Book/Edit.cshtml
+++ b/LibraryManagement/Views/Book/Edit.cshtml
@@ -1,5 +1,5 @@
-﻿@using LibraryManagement.Models.Entities
-@model BookModel
+﻿@using LibraryManagement.Models;
+@model Book
 @{
     ViewData["Title"] = "Edit Book";
 }
