--- a/LibraryManagement/Views/Book/Index.cshtml
+++ b/LibraryManagement/Views/Book/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using LibraryManagement.Models.Entities
-@model List<BookModel>
+﻿@using LibraryManagement.Models;
+@model List<Book>
 @{
 	ViewBag.Title = "Manage Books";
 }
