--- a/LibraryManagement/Views/LibrarianDashboard/ActiveBorrowings.cshtml
+++ b/LibraryManagement/Views/LibrarianDashboard/ActiveBorrowings.cshtml
@@ -45,9 +45,8 @@
                                     }
                                         </td>
                                         <td>
-                                            <form method="post" action="/LibrarianDashboard/ReturnBook">
-                                                <input type="hidden" name="requestId" value="@item. RequestId">
-                                                <button type="submit" class="btn btn-primary btn-sm">Return Book</button>
+        <form method="post" action="/LibrarianDashboard/ReturnBook">
+            <input type="hidden" name="requestId" value="@item.RequestId"> <button type="submit" class="btn btn-primary btn-sm">Return Book</button>
                                             </form>
                                         </td>
                                     </tr>
