--- a/LibraryManagement/Views/StudentDashboard/SearchBooks.cshtml
+++ b/LibraryManagement/Views/StudentDashboard/SearchBooks.cshtml
@@ -1,5 +1,4 @@
-﻿@using LibraryManagement.Models.Entities
-@model List<BookModel>
+﻿@model List<Book>
 @{
     ViewData["Title"] = "Search Books";
 }
