--- a/LibraryManagement/Views/Book/Create.cshtml
+++ b/LibraryManagement/Views/Book/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@using LibraryManagement.Models.Entities
-@model BookModel
+﻿@using LibraryManagement.Models;
+@model Book
 @{
     ViewData["Title"] = "Add New Book";
 }
