--- a/LibraryManagement/Views/Borrowing/Edit.cshtml
+++ b/LibraryManagement/Views/Borrowing/Edit.cshtml
@@ -1,12 +1,13 @@
-﻿@using LibraryManagement.Models.Entities
-@model BorrowingModel
+﻿@using LibraryManagement.Models;
+@using LibraryManagement.Models;
+@model Borrowing
 @{
     ViewData["Title"] = "Edit Borrowing";
 }
 <h2>Edit Borrowing</h2>
 
 <form asp-action="Edit" method="post">
-    <input type="hidden" asp-for="BorrowingId" />
+    <input type="hidden" asp-for="RequestId" />
     <div class="mb-3">
         <label>StudentName</label>
         <input asp-for="StudentName" class="form-control" />
@@ -17,7 +18,7 @@
     </div>
     <div class="mb-3">
         <label>BorrowDate</label>
-        <input asp-for="BorrowDate" type="date" class="form-control" />
+        <input asp-for="RequestDate" type="date" class="form-control" />
     </div>
     <div class="mb-3">
         <label>ReturnedDate</label>
